--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,43 +4,35 @@
 #
 #    pip-compile --no-emit-index-url --output-file=requirements-dev.txt requirements-dev.in
 #
-bleach==4.1.0
+bleach==5.0.1
     # via readme-renderer
 certifi==2022.6.15
     # via requests
-cffi==1.15.0
-    # via cryptography
 cfgv==3.3.1
     # via pre-commit
-charset-normalizer==2.0.12
+charset-normalizer==2.1.0
     # via requests
 commonmark==0.9.1
     # via rich
-cryptography==37.0.4
-    # via secretstorage
-distlib==0.3.4
+distlib==0.3.5
     # via virtualenv
-docutils==0.18.1
+docutils==0.19
     # via readme-renderer
-filelock==3.6.0
+filelock==3.7.1
     # via virtualenv
 flake8==4.0.1
     # via -r requirements-dev.in
-identify==2.4.12
+identify==2.5.1
     # via pre-commit
 idna==3.3
     # via requests
-importlib-metadata==4.11.3
+importlib-metadata==4.12.0
     # via
     #   keyring
     #   twine
 invoke==1.7.1
     # via -r requirements-dev.in
-jeepney==0.8.0
-    # via
-    #   keyring
-    #   secretstorage
-keyring==23.5.0
+keyring==23.7.0
     # via twine
 marshmallow==2.21.0
     # via
@@ -54,26 +46,20 @@ nodeenv==1.7.0
     # via
     #   -r requirements-dev.in
     #   pre-commit
-packaging==21.3
-    # via bleach
-pkginfo==1.8.2
+pkginfo==1.8.3
     # via twine
-platformdirs==2.5.1
+platformdirs==2.5.2
     # via virtualenv
 pre-commit==2.20.0
     # via -r requirements-dev.in
 pycodestyle==2.8.0
     # via flake8
-pycparser==2.21
-    # via cffi
 pyflakes==2.4.0
     # via flake8
-pygments==2.11.2
+pygments==2.12.0
     # via
     #   readme-renderer
     #   rich
-pyparsing==3.0.7
-    # via packaging
 pyyaml==6.0
     # via
     #   -r requirements-dev.in
@@ -88,10 +74,8 @@ requests-toolbelt==0.9.1
     # via twine
 rfc3986==2.0.0
     # via twine
-rich==12.1.0
+rich==12.5.1
     # via twine
-secretstorage==3.3.1
-    # via keyring
 six==1.16.0
     # via
     #   bleach
@@ -104,13 +88,16 @@ toml==0.10.2
     # via pre-commit
 twine==4.0.1
     # via -r requirements-dev.in
-urllib3==1.26.9
+urllib3==1.26.10
     # via
     #   requests
     #   twine
-virtualenv==20.14.0
+virtualenv==20.15.1
     # via pre-commit
 webencodings==0.5.1
     # via bleach
-zipp==3.7.0
+zipp==3.8.1
     # via importlib-metadata
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
