--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -15,7 +15,7 @@ alembic==1.7.7
     # via
     #   -r requirements-tests.txt
     #   flask-migrate
-amqp==5.1.0
+amqp==5.1.1
     # via kombu
 aniso8601==9.0.1
     # via flask-restful
@@ -41,21 +41,21 @@ aws-xray-sdk==2.9.0
     # via
     #   -r requirements-tests.txt
     #   moto
-babel==2.9.1
+babel==2.10.3
     # via sphinx
 bandit==1.7.4
     # via -r requirements-tests.txt
-bcrypt==3.2.0
+bcrypt==3.2.2
     # via
     #   flask-bcrypt
     #   paramiko
-beautifulsoup4==4.10.0
+beautifulsoup4==4.11.1
     # via cloudflare
 billiard==3.6.4.0
     # via celery
 black==22.6.0
     # via -r requirements-tests.txt
-blinker==1.4
+blinker==1.5
     # via
     #   flask-mail
     #   flask-principal
@@ -238,7 +238,9 @@ idna==3.3
     #   -r requirements-tests.txt
     #   moto
     #   requests
-imagesize==1.3.0
+imagesize==1.4.1
+    # via sphinx
+importlib-metadata==4.12.0
     # via sphinx
 inflection==0.5.1
     # via -r requirements-docs.in
@@ -278,7 +280,7 @@ jsondiff==1.3.1
     # via
     #   -r requirements-tests.txt
     #   moto
-jsonlines==3.0.0
+jsonlines==3.1.0
     # via cloudflare
 jsonpatch==1.32
     # via
@@ -368,7 +370,7 @@ pluggy==1.0.0
     # via
     #   -r requirements-tests.txt
     #   pytest
-prompt-toolkit==3.0.28
+prompt-toolkit==3.0.30
     # via click-repl
 py==1.11.0
     # via
@@ -387,11 +389,11 @@ pycparser==2.21
     # via
     #   -r requirements-tests.txt
     #   cffi
-pycryptodomex==3.14.1
+pycryptodomex==3.15.0
     # via pyjks
 pyflakes==2.4.0
     # via -r requirements-tests.txt
-pygments==2.11.2
+pygments==2.12.0
     # via sphinx
 pyjks==20.0.0
     # via -r requirements-docs.in
@@ -439,7 +441,7 @@ python-jose[cryptography]==3.3.0
     # via
     #   -r requirements-tests.txt
     #   moto
-python-json-logger==2.0.2
+python-json-logger==2.0.4
     # via logmatic-python
 pytz==2022.1
     # via
@@ -506,7 +508,6 @@ sentry-sdk==1.7.2
 six==1.16.0
     # via
     #   -r requirements-tests.txt
-    #   bcrypt
     #   cfn-lint
     #   click-repl
     #   configobj
@@ -532,7 +533,7 @@ sortedcontainers==2.4.0
     # via
     #   -r requirements-tests.txt
     #   fakeredis
-soupsieve==2.3.1
+soupsieve==2.3.2.post1
     # via beautifulsoup4
 sphinx==5.0.2
     # via
@@ -582,6 +583,8 @@ tomli==2.0.1
     #   pytest
 twofish==0.3.0
     # via pyjks
+typing-extensions==4.3.0
+    # via black
 urllib3==1.26.9
     # via
     #   -r requirements-tests.txt
@@ -618,6 +621,8 @@ xmltodict==0.13.0
     #   -r requirements-docs.in
     #   -r requirements-tests.txt
     #   moto
+zipp==3.8.1
+    # via importlib-metadata
 zope-component==5.0.1
     # via
     #   -r requirements-tests.txt
