--- a/requirements-tests.txt
+++ b/requirements-tests.txt
@@ -6,7 +6,7 @@
 #
 acme==1.29.0
     # via certbot
-alembic==1.7.7
+alembic==1.8.1
     # via flask-migrate
 async-timeout==4.0.2
     # via redis
@@ -16,15 +16,15 @@ attrs==21.4.0
     #   jsonschema
     #   pytest
     #   sarif-om
-aws-sam-translator==1.44.0
+aws-sam-translator==1.47.0
     # via cfn-lint
-aws-xray-sdk==2.9.0
+aws-xray-sdk==2.10.0
     # via moto
 bandit==1.7.4
     # via -r requirements-tests.in
 black==22.6.0
     # via -r requirements-tests.in
-boto3==1.24.27
+boto3==1.24.32
     # via
     #   aws-sam-translator
     #   moto
@@ -38,13 +38,13 @@ certbot==1.29.0
     # via -r requirements-tests.in
 certifi==2022.6.15
     # via requests
-cffi==1.15.0
+cffi==1.15.1
     # via cryptography
-cfn-lint==0.58.4
+cfn-lint==0.61.3
     # via moto
-charset-normalizer==2.0.12
+charset-normalizer==2.1.0
     # via requests
-click==8.1.0
+click==8.1.3
     # via
     #   black
     #   flask
@@ -69,7 +69,7 @@ distro==1.7.0
     # via certbot
 docker==5.0.3
     # via moto
-ecdsa==0.17.0
+ecdsa==0.18.0
     # via
     #   moto
     #   python-jose
@@ -94,13 +94,11 @@ flask-sqlalchemy==2.5.1
     # via flask-migrate
 freezegun==1.2.1
     # via -r requirements-tests.in
-future==0.18.2
-    # via aws-xray-sdk
 gitdb==4.0.9
     # via gitpython
 gitpython==3.1.27
     # via bandit
-graphql-core==3.2.0
+graphql-core==3.2.1
     # via moto
 idna==3.3
     # via
@@ -117,7 +115,7 @@ jinja2==3.0.3
     #   -r requirements-tests.in
     #   flask
     #   moto
-jmespath==1.0.0
+jmespath==1.0.1
     # via
     #   boto3
     #   botocore
@@ -127,13 +125,13 @@ josepy==1.13.0
     #   certbot
 jschema-to-python==1.2.3
     # via cfn-lint
-jsondiff==1.3.1
+jsondiff==2.0.0
     # via moto
 jsonpatch==1.32
     # via cfn-lint
-jsonpickle==2.1.0
+jsonpickle==2.2.0
     # via jschema-to-python
-jsonpointer==2.2
+jsonpointer==2.3
     # via jsonpatch
 jsonschema==3.2.0
     # via
@@ -141,7 +139,7 @@ jsonschema==3.2.0
     #   cfn-lint
 junit-xml==1.9
     # via cfn-lint
-mako==1.2.0
+mako==1.2.1
     # via alembic
 markupsafe==2.1.1
     # via
@@ -158,7 +156,7 @@ moto[all]==3.1.1
     # via -r requirements-tests.in
 mypy-extensions==0.4.3
     # via black
-networkx==2.7.1
+networkx==2.8.5
     # via cfn-lint
 nose==1.3.7
     # via -r requirements-tests.in
@@ -170,12 +168,12 @@ parsedatetime==2.6
     # via certbot
 pathspec==0.9.0
     # via black
-pbr==5.8.1
+pbr==5.9.0
     # via
     #   jschema-to-python
     #   sarif-om
     #   stevedore
-platformdirs==2.5.1
+platformdirs==2.5.2
     # via black
 pluggy==1.0.0
     # via pytest
@@ -193,7 +191,7 @@ pyopenssl==22.0.0
     # via
     #   acme
     #   josepy
-pyparsing==3.0.7
+pyparsing==3.0.9
     # via packaging
 pyrfc3339==1.1
     # via
@@ -246,7 +244,7 @@ requests-mock==1.9.3
     # via -r requirements-tests.in
 requests-toolbelt==0.9.1
     # via acme
-responses==0.20.0
+responses==0.21.0
     # via moto
 rsa==4.8
     # via python-jose
@@ -256,7 +254,6 @@ sarif-om==1.0.4
     # via cfn-lint
 six==1.16.0
     # via
-    #   cfn-lint
     #   configobj
     #   ecdsa
     #   fakeredis
@@ -276,18 +273,20 @@ sqlalchemy==1.3.24
     #   marshmallow-sqlalchemy
 sshpubkeys==3.3.1
     # via moto
-stevedore==3.5.0
+stevedore==4.0.0
     # via bandit
 tomli==2.0.1
     # via
     #   black
     #   pytest
-urllib3==1.26.9
+typing-extensions==4.3.0
+    # via black
+urllib3==1.26.10
     # via
     #   botocore
     #   requests
     #   responses
-websocket-client==1.3.1
+websocket-client==1.3.3
     # via docker
 werkzeug==2.0.3
     # via
@@ -295,7 +294,7 @@ werkzeug==2.0.3
     #   flask
     #   moto
     #   pytest-flask
-wrapt==1.14.0
+wrapt==1.14.1
     # via
     #   aws-xray-sdk
     #   deprecated
