--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,11 @@ acme==1.29.0
     # via
     #   -r requirements.in
     #   certbot
-alembic==1.7.7
+alembic==1.8.1
     # via flask-migrate
 alembic-autogenerate-enums==0.0.2
     # via -r requirements.in
-amqp==5.1.0
+amqp==5.1.1
     # via kombu
 aniso8601==9.0.1
     # via flask-restful
@@ -24,19 +24,19 @@ asyncpool==1.0
     # via -r requirements.in
 attrs==21.4.0
     # via jsonlines
-bcrypt==3.2.0
+bcrypt==3.2.2
     # via
     #   flask-bcrypt
     #   paramiko
-beautifulsoup4==4.10.0
+beautifulsoup4==4.11.1
     # via cloudflare
 billiard==3.6.4.0
     # via celery
-blinker==1.4
+blinker==1.5
     # via
     #   flask-mail
     #   flask-principal
-boto3==1.24.27
+boto3==1.24.32
     # via -r requirements.in
 botocore==1.27.32
     # via
@@ -52,16 +52,16 @@ certifi==2022.6.15
     #   -r requirements.in
     #   requests
     #   sentry-sdk
-certsrv==2.1.1
+certsrv[ntlm]==2.1.1
     # via -r requirements.in
-cffi==1.15.0
+cffi==1.15.1
     # via
     #   bcrypt
     #   cryptography
     #   pynacl
-charset-normalizer==2.0.12
+charset-normalizer==2.1.0
     # via requests
-click==8.1.0
+click==8.1.3
     # via
     #   celery
     #   click-didyoumean
@@ -88,6 +88,7 @@ cryptography==37.0.4
     #   josepy
     #   paramiko
     #   pyopenssl
+    #   requests-ntlm
 decorator==5.1.1
     # via validators
 deprecated==1.2.13
@@ -151,7 +152,7 @@ jinja2==3.0.3
     # via
     #   -r requirements.in
     #   flask
-jmespath==1.0.0
+jmespath==1.0.1
     # via
     #   boto3
     #   botocore
@@ -159,7 +160,7 @@ josepy==1.13.0
     # via
     #   acme
     #   certbot
-jsonlines==3.0.0
+jsonlines==3.1.0
     # via cloudflare
 kombu==5.2.4
     # via celery
@@ -167,7 +168,7 @@ lockfile==0.12.2
     # via -r requirements.in
 logmatic-python==0.1.7
     # via -r requirements.in
-mako==1.2.0
+mako==1.2.1
     # via alembic
 markupsafe==2.1.1
     # via
@@ -181,6 +182,8 @@ marshmallow-sqlalchemy==0.23.1
     # via -r requirements.in
 ndg-httpsclient==0.5.1
     # via -r requirements.in
+ntlm-auth==1.5.0
+    # via requests-ntlm
 packaging==21.3
     # via redis
 paramiko==2.11.0
@@ -189,7 +192,7 @@ parsedatetime==2.6
     # via certbot
 pem==21.2.0
     # via -r requirements.in
-prompt-toolkit==3.0.28
+prompt-toolkit==3.0.30
     # via click-repl
 psycopg2==2.9.3
     # via -r requirements.in
@@ -205,7 +208,7 @@ pyasn1-modules==0.2.8
     #   python-ldap
 pycparser==2.21
     # via cffi
-pycryptodomex==3.14.1
+pycryptodomex==3.15.0
     # via pyjks
 pyjks==20.0.0
     # via -r requirements.in
@@ -219,7 +222,7 @@ pyopenssl==22.0.0
     #   acme
     #   josepy
     #   ndg-httpsclient
-pyparsing==3.0.7
+pyparsing==3.0.9
     # via packaging
 pyrfc3339==1.1
     # via
@@ -229,7 +232,7 @@ python-dateutil==2.8.2
     # via
     #   arrow
     #   botocore
-python-json-logger==2.0.2
+python-json-logger==2.0.4
     # via logmatic-python
 python-ldap==3.4.2
     # via -r requirements.in
@@ -255,7 +258,10 @@ requests==2.28.1
     #   certsrv
     #   cloudflare
     #   hvac
+    #   requests-ntlm
     #   requests-toolbelt
+requests-ntlm==1.1.0
+    # via certsrv
 requests-toolbelt==0.9.1
     # via acme
 retrying==1.3.3
@@ -267,7 +273,6 @@ sentry-sdk==1.7.2
 six==1.16.0
     # via
     #   -r requirements.in
-    #   bcrypt
     #   click-repl
     #   configobj
     #   flask-cors
@@ -276,7 +281,7 @@ six==1.16.0
     #   paramiko
     #   python-dateutil
     #   retrying
-soupsieve==2.3.1
+soupsieve==2.3.2.post1
     # via beautifulsoup4
 sqlalchemy==1.3.24
     # via
@@ -291,7 +296,7 @@ tabulate==0.8.10
     # via -r requirements.in
 twofish==0.3.0
     # via pyjks
-urllib3==1.26.9
+urllib3==1.26.10
     # via
     #   botocore
     #   requests
@@ -309,7 +314,7 @@ werkzeug==2.0.3
     # via
     #   -r requirements.in
     #   flask
-wrapt==1.14.0
+wrapt==1.14.1
     # via deprecated
 xmltodict==0.13.0
     # via -r requirements.in
